--- a/index.html
+++ b/index.html
@@ -182,13 +182,14 @@
                         consent.
 
                     </p>
+                    <div class="span_a">
                     <div>
-                        <span>Privacy policy</span>
-                        <span>Cookie policy</span>
-                        <a href="#">Got It</a>
+                        <span>Privacy policy   </span>
+                        <span> Cookie policy</span>
                     </div>
-
-
+                    <a href="#" class="Got_it">Got It</a>
+                    </div>
+                </div>
                 </div>
                 <div class="main_text_tree">
                     <h3>You’ve got startup equity. Now what?</h3>
@@ -202,7 +203,7 @@
 
 
 
-             <h2>How we help startup builders</h2>
+             <!-- <h2 class="container">How we help startup builders</h2> -->
 
 
 
